# ChangeLog for xfce-base/orage
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/orage/Attic/ChangeLog,v 1.8 2006/12/07 02:47:40 nichoj Exp $

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org> -orage-4.3.90.1.ebuild,
  -orage-4.3.90.2.ebuild:
  Pruned old versions with new versions with same or better keywords.

*orage-4.3.99.2 (07 Dec 2006)

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org> +orage-4.3.99.2.ebuild:
  Version bump for RC2. See bug #146563.

  13 Jul 2006; Joshua Nichols <jnichols@gentoo.org>
  +files/orage-4.3.90.2-asneeded.patch, orage-4.3.90.2.ebuild:
  Applied as-needed patch, as supplied by drac.

  10 Jul 2006; Brad Cowan <bcowan@gentoo.org> ChangeLog:
  Xfce beta 2 builds.

  07 Jun 2006; Stefan Schweizer <genstef@gentoo.org> orage-4.3.90.1.ebuild:
  eds is no dep, bugs 132266 and 135901, thanks drac

  13 May 2006; Brad Cowan <bcowan@gentoo.org> orage-4.3.90.1.ebuild:
  Add USE flag for evolution-data-server until I figure out why it is a dep.

  28 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

*orage-4.3.90.1 (20 Apr 2006)

  20 Apr 2006; Daniel Ostrow <dostrow@gentoo.org> +metadata.xml,
  +orage-4.3.90.1.ebuild:
  Version bump for 4.4_beta1.
