@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/orage/Attic/orage-4.3.99.2.ebuild,v 1.1 2006/12/05 16:58:06 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/orage/Attic/orage-4.3.99.2.ebuild,v 1.2 2007/01/06 19:06:33 nichoj Exp $
 
 inherit xfce44
 
@@ -8,8 +8,7 @@ xfce44_beta
 
 DESCRIPTION="Xfce4 calendar"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
-
-IUSE="berkdb"
+IUSE="debug berkdb"
 
 RDEPEND="|| ( x11-libs/libX11
 	virtual/x11 )
