@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfwm4/Attic/xfwm4-4.3.99.2.ebuild,v 1.1 2006/12/05 16:49:37 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfwm4/Attic/xfwm4-4.3.99.2.ebuild,v 1.2 2007/01/06 19:03:48 nichoj Exp $
 
 inherit xfce44
 
@@ -9,7 +9,7 @@ xfce44_beta
 DESCRIPTION="Xfce 4 window manager"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
 
-IUSE="startup-notification xcomposite"
+IUSE="debug startup-notification xcomposite"
 
 RDEPEND="|| ( ( x11-libs/libX11
 	x11-libs/libXrandr
