@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfwm4
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfwm4/ChangeLog,v 1.73 2006/12/07 04:29:27 nichoj Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfwm4/ChangeLog,v 1.74 2007/01/06 19:03:48 nichoj Exp $
+
+  06 Jan 2007; Joshua Nichols <nichoj@gentoo.org> xfwm4-4.3.99.2.ebuild:
+  Added IUSE=debug, which was dropped when 'inherit debug' was removed from
+  xfce44.eclass.
 
   07 Dec 2006; Joshua Nichols <nichoj@gentoo.org> -xfwm4-4.2.1.ebuild,
   -xfwm4-4.2.2.ebuild, -xfwm4-4.2.2-r1.ebuild, -xfwm4-4.3.90.1.ebuild,
