@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/orage
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/orage/Attic/ChangeLog,v 1.8 2006/12/07 02:47:40 nichoj Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/orage/Attic/ChangeLog,v 1.9 2007/01/06 19:06:33 nichoj Exp $
+
+  06 Jan 2007; Joshua Nichols <nichoj@gentoo.org> orage-4.3.99.2.ebuild:
+  Added IUSE=debug, which was dropped when 'inherit debug' was removed from
+  xfce44.eclass.
 
   07 Dec 2006; Joshua Nichols <nichoj@gentoo.org> -orage-4.3.90.1.ebuild,
   -orage-4.3.90.2.ebuild:
